# tinyflows

./: .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
docs/: 00-overview.md  01-architecture.md  02-workflow-model.md  03-node-catalog.md  04-execution-engine.md  05-capability-traits.md  06-triggers.md  07-security.md  08-roadmap.md  09-openhuman-integration.md  10-reference-workflows.md  11-decisions.md  12-testing.md  13-data-and-expressions.md  14-error-handling.md  15-credentials-and-connections.md  16-observability-and-runs.md  17-node-authoring.md  18-versioning-and-migration.md  19-feature-matrix.md  20-glossary.md  21-coding-guidelines.md  AUDIT-n8n-gap.md  README.md  chrome-extension.md
examples/: capability_pipeline.rs  conditional_branch.rs  error_handling.rs  hello_workflow.rs  hitl_approval.rs  jq_expressions.rs  parallel_and_merge.rs
extension/: .gitignore  README.md  eslint.config.js  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vitest.config.ts
extension/artifacts/: tinyflows-chrome-extension-0.1.0.zip.sha256
extension/coverage/: coverage-summary.json
extension/scripts/: build.mjs  package.mjs
extension/src/: background.ts  cdp.ts  errors.ts  popup.ts  protocol.ts  relay.ts  sidepanel.ts  tab-manager.ts
extension/tests/: cdp.test.ts  errors.test.ts  protocol.test.ts  relay.test.ts  tab-manager.test.ts
extension/tests/e2e/: extension.spec.ts
protocol/: browser-v1.schema.json
protocol/fixtures/: browser-cancel.v1.json  browser-request.v1.json  browser-response.v1.json  tab-shared.v1.json
src/: catalog.rs  compiler.rs  data.rs  engine.rs  error.rs  expr.rs  graph_ops.rs  lib.rs  main.rs  migrate.rs  observability.rs  validate.rs
src/browser/: mod.rs  protocol.rs  routing.rs
src/caps/: mock.rs  mod.rs
src/companion/: auth.rs  control.rs  mod.rs  relay.rs  server.rs  tabs.rs
src/model/: mod.rs  node_kind.rs
src/nodes/: control_flow.rs  integration.rs  mod.rs
src/nodes/control_flow/: condition.rs  merge.rs  mod.rs  split_out.rs  switch.rs  transform.rs
src/nodes/integration/: agent.rs  code.rs  envelope.rs  http_request.rs  mod.rs  output_parser.rs  schema.rs  sub_workflow.rs  tool_call.rs
tests/: branching_e2e.rs  browser_routing_e2e.rs  capability_pipeline_e2e.rs  cli_e2e.rs  data_binding_e2e.rs  data_flow_e2e.rs  eng5_barrier_relief_e2e.rs  error_recovery_e2e.rs  expressions_e2e.rs  hardening_branching_e2e.rs  hardening_expr_consistency_e2e.rs  hardening_lifecycle_e2e.rs  hitl_e2e.rs  observability_e2e.rs  parallel_e2e.rs  realworld_e2e.rs  reference_workflows.rs  reliability_e2e.rs  smoke_all_nodes.rs  timeout_per_attempt_e2e.rs  versioning_e2e.rs
wiki/: Architecture.md  Capability-Traits.md  Getting-Started.md  Home.md  Node-Catalog.md  Roadmap-and-Status.md  _Sidebar.md
