[package]
name = "tinyflows"
version = "0.5.0"
edition = "2024"
rust-version = "1.85"
license = "GPL-3.0-or-later"
description = "A Rust-based workflow management solution."
readme = "README.md"
repository = "https://github.com/tinyhumansai/tinyflows"
homepage = "https://github.com/tinyhumansai/tinyflows"
documentation = "https://docs.rs/tinyflows"
keywords = ["automation", "workflow", "orchestration", "pipeline"]
categories = ["command-line-utilities", "development-tools"]
# Anchored with a leading `/` so a bare name like `README.md` doesn't also match
# nested files (e.g. the gitignored `local/**/README.md`) and leak them into the
# published package.
include = [
    "/src/**/*.rs",
    "/Cargo.toml",
    "/README.md",
    "/LICENSE",
]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
async-trait = "0.1"
thiserror = "2"
futures-timer = "3"
tinyagents = "1.2"
tracing = "0.1"
jaq-core = "3.1.0"
jaq-std = "3.0.1"
jaq-json = { version = "2.0.1", features = ["serde"] }

[features]
# Off by default; enables in-memory mock capability impls for downstream tests
# and examples. Mocks are always available inside this crate's own tests.
default = []
mock = []

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt", "time"] }
proptest = "1"
async-trait = "0.1"
